<resources>
    <string name="app_name">PracticalTasks</string>
    <string name="loading">Загрузка...</string>
    <string name="choose_help_category">Выберите категорию помощи</string>
    <string name="help">Помочь</string>

    <string name="children">Дети</string>
    <string name="adults">Взрослые</string>
    <string name="elders">Пожилые</string>
    <string name="animals">Животные</string>
    <string name="events">Мероприятия</string>
    <string name="search">Поиск</string>
    <string name="profile">Профиль</string>
    <string name="history">История</string>
    <string name="news">Новости</string>
    <string name="birth_date">Дата Рождения</string>
    <string name="field_of_activity">Сфера деятельности</string>
    <string name="receive_push_notification">Получать push-уведомления</string>
    <string name="your_friends">Ваши друзья</string>
    <string name="log_out">Выйти из аккаунта</string>

    <string name="choose_photo">Выбрать фото</string>
    <string name="take_a_photo">Сделать снимок</string>
    <string name="delete">Удалить</string>
    <string name="enter_organization_name">Введите название организации</string>
    <string name="key_words">Ключевые слова:</string>
    <string name="results_count">Результаты поиска:</string>

    <string name="by_events">По мероприятиям</string>
    <string name="by_nko">По НКО</string>
    <string name="do_you_have_questions">У вас есть вопросы?</string>
    <string name="contact_us">Напишите нам</string>
    <string name="go_to_organization_site">Перейти на сайт организаии</string>
    <string name="help_with_clothes">Помочь вещами</string>
    <string name="become_volunteer">Стать волонтером</string>
    <string name="prof_help">Проф. помощь</string>
    <string name="help_with_coins">Помочь деньгами</string>
    <string name="no_content">Данной статьи не существует</string>


    <plurals name="days_plural">
        <item quantity="zero">Осталось %d дней</item>
        <item quantity="one">Осталось %d день</item>
        <item quantity="few">Осталось %d дня</item>
        <item quantity="two">Осталось %d дня</item>
        <item quantity="many">Осталось %d дней</item>
        <item quantity="other">Осталось %d дней</item>
    </plurals>
</resources>
